--- a/src/styles/TopNavBar.css
+++ b/src/styles/TopNavBar.css
@@ -1,13 +1,17 @@
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
+    padding-left: 45px;
+    height: 35px;
+    float: left;
+
+
 }
 
 .App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
+    background-color: #1D428A;
+    height: 55px;
     color: white;
+    display: flex;
+    align-items: center;
 }
 
 .App-title {
