--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,9 +1,10 @@
 .main {
     display: flex;
-    width: 550px;
+    width: 750px;
     margin: auto;
     border: 3px solid #ccc;
     box-shadow: 5px 10px 10px #888;
     border-radius: 10px;
     margin-top: 70px;
+    overflow:hidden;
 }
