--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -2,3 +2,12 @@
     width:750px;
     margin-bottom: 30px;
 }
+
+.player-option-image {
+    height:32px;
+    margin-right: 20px;
+}
+
+player-option-labe {
+    font-size:15px;
+}
